--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
-  },
+    "web-vitals": "^0.2.4",
+    "react-router-dom": "^5.2.0",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "axios": "^0.19.0"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
