--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "moment": "^2.29.1",
+    "date-fns": "^2.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
