--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<version>2.20.0</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>com.google.guava</groupId>
+    		<artifactId>guava</artifactId>
+    		<version>20.0</version>
+		</dependency>
+		
 		<dependency> 
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
