--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4",
     "moment": "^2.29.1",
-    "date-fns": "^2.16.1"
+    "date-fns": "^2.16.1",
+    "@material-ui/data-grid": "latest",
+    "@material-ui/x-grid-data-generator": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
