--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "latest",
     "@material-ui/icons": "latest",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/x-grid-data-generator": "latest",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "datatable": "^2.0.2",
+    "date-fns": "^2.16.1",
+    "moment": "^2.29.1",
     "primeicons": "^4.0.0",
     "primereact": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "web-vitals": "^0.2.4",
-    "moment": "^2.29.1",
-    "date-fns": "^2.16.1",
-    "@material-ui/data-grid": "latest",
-    "@material-ui/x-grid-data-generator": "latest"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
