--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "chart.js": "2.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
